# TaskAssignment

./: .gitignore  AUTHORS.md  CMakeLists.txt  CTestConfig.cmake  INSTALL.md  README.md
app/: CMakeLists.txt
app/SFML/: CMakeLists.txt  main.cpp
app/SFML/src/: drawcontroller.cpp  environment.cpp  resource.cpp  taskspot.cpp
cmake/: Config.cmake  Files.cmake  Macro.cmake  Package.cmake  Target.cmake
cmake/module/: FindSIF.cmake
doc/: CMakeLists.txt  index.h  rap.tex  sif.doxyfile  sif.doxyfile.cmake
doc/Besoins/: Besoins.odt  application.tex  framework.tex  intro.tex  rap.aux  rap.tex  rap.toc
doc/Modelisation/: Specifications.odt  application.tex  framework.tex  insa.sty  modelisation.tex  rap.tex  strat  taskassignment.zargo
doc/RapportFinal/: application.tex  besoins.tex  ccl.tex  construction.tex  guide.tex  implementation.tex  intro.tex  modelisation.tex  rap.tex  tests.tex
doc/SpeFonc/: insa.sty  rap.tex  rq.txt  tests.tex  unitTestsAssignment.tex  unitTestsConstraint.tex  unitTestsCore.tex  unitTestsEnvironnement.tex  unitTestsGraph.tex  unitTestsIA.tex  unitTestsUtils.tex
doc/rap/: intro.tex  methodologie.tex  modelisation.tex  rap.sty  rap.tex
include/: CMakeLists.txt  sif  sif.hpp
include/SIF/assignment/: assignment.hpp  assignmentFactory.hpp  kuhn.hpp
include/SIF/constraint/: constraint.hpp  constraintSystem.hpp  customConstraint.hpp  propConstraint.hpp  stepConstraint.hpp
include/SIF/core/: activePolicy.hpp  config.hpp  controller.hpp  multiThread.hpp  observable.hpp  observablePolicy.hpp  observer.hpp  passivePolicy.hpp  singleThread.hpp  step.hpp  threadingModel.hpp  using.hpp
include/SIF/core/continue/: continue.hpp  stepsContinue.hpp  timeContinue.hpp
include/SIF/environment/: aCoordonate.hpp  aEnvironment.hpp  aObject.hpp  aResource.hpp  aTaskSpot.hpp  coordonate.hpp  direction.hpp  dynamicObject.hpp  environment.hpp  eval.hpp  object.hpp  obstacle.hpp  overlap.hpp  resource.hpp  ressource.hpp  space.hpp  spatialData.hpp  square.hpp  staticObject.hpp  task.hpp  taskSpot.hpp
include/SIF/graph/: aPath.hpp  atlasGrid.hpp  movement.hpp  path.hpp  quadTree.hpp  rTree.hpp  simpleIndex.hpp  tree.hpp  treeFactory.hpp
include/SIF/ia/: ia.hpp  model.hpp  strategy.hpp
include/SIF/ia/model/: manualModel.hpp  manualStatesModel.hpp
include/SIF/ia/strategy/: simpleStrategy.hpp  simpleStrategy.hpp.h
include/SIF/spa/: aStar.hpp  shortestPath.hpp  shortestPathFactory.hpp  simpleSP.hpp
include/SIF/utils/: baseLogger.hpp  logger.hpp  timeManagement.hpp
lessons/: CMakeLists.txt
lessons/Lesson1/: CMakeLists.txt  l1-basicSimulation.cpp
src/SIF/: CMakeLists.txt
src/SIF/assignment/: assignment.cpp  assignmentFactory.cpp  kuhn.cpp
src/SIF/constraint/: constraint.cpp  contraintSystem.cpp  customConstraint.cpp  stepConstraint.cpp
src/SIF/core/: activePolicy.cpp  controller.cpp  multiThread.cpp  observable.cpp  observablePolicy.cpp  observer.cpp  observer.hpp  passivePolicy.cpp  singleThread.cpp  step.cpp  threadingModel.cpp
src/SIF/core/continue/: continue.cpp  stepsContinue.cpp  timeContinue.cpp
src/SIF/environment/: aEnvironment.cpp  aResource.cpp  aTaskSpot.cpp  coordonate.cpp  direction.cpp  dynamicObject.cpp  environment.cpp  eval.cpp  object.cpp  obstacle.cpp  resource.cpp  space.cpp  spatialData.cpp  square.cpp  staticObject.cpp  task.cpp  taskSpot.cpp
src/SIF/graph/: atlasGrid.cpp  path.cpp  quadTree.cpp  rTree.cpp  simpleIndex.cpp  tree.cpp  treeFactory.cpp
src/SIF/ia/: ia.cpp  model.cpp  strategy.cpp
src/SIF/ia/model/: manualModel.cpp
src/SIF/ia/strategy/: simpleStrategy.cpp
src/SIF/spa/: aStar.cpp  shortestPath.cpp  shortestPathFactory.cpp  simpleSP.cpp
src/SIF/utils/: baseLogger.cpp  logger.cpp  timeManagement.cpp
test/: CMakeLists.txt  it-assignment.cpp  it-controller.cpp  it-ia.cpp  t-controller.cpp  t-logger.cpp  ut-aStar.cpp  ut-atlasGrid.cpp  ut-constraint.cpp  ut-coordonate.cpp  ut-direction.cpp  ut-dynamicObject.cpp  ut-environment.cpp  ut-eval.cpp  ut-ia.cpp  ut-kuhn.cpp  ut-logger.cpp  ut-manualModel.cpp  ut-model.cpp  ut-object.cpp  ut-observer.cpp  ut-obstacle.cpp  ut-path.cpp  ut-quadTree.cpp  ut-rTree.cpp  ut-resource.cpp  ut-shortestPath.cpp  ut-shortestPathFactory.cpp  ut-simpleIndex.cpp  ut-simpleStrategy.cpp  ut-space.cpp  ut-spatialData.cpp  ut-square.cpp  ut-staticObject.cpp  ut-strategy.cpp  ut-task.cpp  ut-taskSpot.cpp  ut-threading.cpp  ut-tree.cpp  ut-treeFactory.cpp
