######################################################################################
### 0) Include lessons subdirectories
######################################################################################

add_subdirectory(Lesson1)

######################################################################################
### 0) Install BaseFile for all lessons and data
######################################################################################
